# remarkablymoving

./: .remarkable_pdf_generator.py.CoLJtIpgCV1bTvrciTcHx~  .replit  README.md  REMARKABLE_OPTIMIZATIONS.md  app.py  config.js  fix-calendar-script.sh  index.html  index.html.backup.20250908_051423  package-lock.json  package.json  pdf-generator-backend.js  pdf-server.js  pyproject.toml  remarkable-optimized.html  remarkable_pdf_generator.py  replit.md  server.py
attached_assets/: 55_1757371939402.html  6_1757374329587.html  Pasted--Comprehensive-Prompt-for-reMarkable-Pro-Move-Weekly-Planner-Implementation-Project-Overview-C-1757377735824_1757377735824.txt  Pasted--client-integration-js-Integration-with-your-existing-Replit-calendar-app-class-RemarkablePDFGe-1757347318206_1757347318207.txt  Pasted--reMarkable-Paper-Pro-Planner-Final-UI-Updates-Latest-UI-Improvements-Completed-I-ve-made--1757372704593_1757372704594.txt  Pasted--reMarkable-Pro-PDF-Planner-Generator-Setup-Guide-Overview-This-system-generates-optimized-P-1757347253923_1757347253923.txt  Pasted--server-js-Express-backend-for-PDF-generation-const-express-require-express-const-puppetee-1757347299806_1757347299807.txt  Pasted-Analyzing-your-current-output-I-can-see-several-critical-issues-that-need-immediate-correction--1757367742030_1757367742030.txt  Pasted-I-ll-help-you-create-a-PDF-generation-system-optimized-for-the-reMarkable-Pro-eink-device-Based-on--1757347348764_1757347348764.txt  simple_calendar_generator_1757375839275.py  (+3 more)
public/: client-integration.js
