[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
]
